--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=${PORT:8090}
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
-spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL:mysql://localhost:3306/software?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=UTF8&serverTimezone=Europe/Moscow}
+spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL}
 spring.datasource.username=root
 spring.datasource.password=Masmetus2018
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
