--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-#server.servlet.contex-path=/software
-server.port=${PORT:8090}
+server.servlet.contex-path=/software
+server.port=8090
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
 spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL}
+#spring.datasource.url=jdbc:mysql://localhost:3306/software?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=UTF8&serverTimezone=Europe/Moscow
+#spring.datasource.username=root
+#spring.datasource.password=Masmetus2018
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
