Прошу, не отчисляйте :(

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8090
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
-spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL}
+spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL=mysql://be7d2bee438427:eeed730e@eu-cdbr-west-01.cleardb.com/heroku_6f7e511602c88ad?useUnicode=true& characterEncoding=utf-8& reconnect=true}
 #spring.datasource.url=jdbc:mysql://localhost:3306/software?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=UTF8&serverTimezone=Europe/Moscow
 #spring.datasource.username=root
 #spring.datasource.password=Masmetus2018
