--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.contex-path=/software
+#server.servlet.contex-path=/software
 #server.port=8090
 
 spring.mvc.hiddenmethod.filter.enabled=true
